fix: correção login tab-index, toast effect e z-index input.

--- a/src/styles/efects.css
+++ b/src/styles/efects.css
@@ -24,6 +24,8 @@
   margin: 0;
   height: 56px;
   width: 300px;
+  position: relative;
+  z-index: 1;
 }
 
 .input-container__input ~ .focus-border:before,
@@ -110,9 +112,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0;
 
   position: fixed;
-  visibility: hidden;
+  /* visibility: hidden; */
 
   top: 85px;
   right: 8%;
@@ -127,11 +130,15 @@
   background-color: white;
   border-radius: 8px;
   box-shadow: 1px 7px 14px -5px rgba(0, 0, 0, 0.2);
+  transition: opacity 0.8s, right 0.8s;
+  right: -100px;
 }
 
 .toast.show {
-  visibility: visible;
-  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  opacity: 1;
+  right: 40px;
+  /* transition: opacity 0.8s; */
+  /* animation: fadein 0.5s, fadeout 0.5s 2.5s; */
 }
 
 .toast:before {
